<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/view_camera_and_title"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tarea_details_label"/>
    <Button
        android:id="@+id/tarea_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:layout_marginBottom="10dp"
        android:text="@string/tarea_pick_date"
        />
    <Button
        android:id="@+id/tarea_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:text="@string/tarea_pick_time"
        />
    <CheckBox
        android:id="@+id/tarea_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tarea_completed"/>
    <CheckBox
        android:id="@+id/tarea_activated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tarea_activated"/>
    <Button
        android:id="@+id/tarea_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:layout_marginBottom="10dp"
        android:text="@string/tarea_person_to_be_called"/>
    <Button
        android:id="@+id/tarea_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:text="@string/tarea_call_person"/>
</LinearLayout>